buildscript {
    repositories {
        gradlePluginPortal()
    }
    dependencies {
        classpath "com.github.jengelman.gradle.plugins:shadow:6.1.0"
    }
}

allprojects {
    group "net.kunmc.lab"
    version = "0.21.0"
}

ext {
    commandLibVersion = "0.17.1"
}

subprojects {
    apply plugin: "java"
    apply plugin: "java-library"
    apply plugin: "maven-publish"
    apply plugin: "idea"

    java {
        toolchain.languageVersion = JavaLanguageVersion.of(11)
    }

    idea {
        module {
            downloadJavadoc = true
            downloadSources = true
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
    }

    publishing {
        publications {
            maven(MavenPublication) {
                groupId = project.group
                artifactId = project.name
                version = project.version

                from components.java
            }
        }
    }

    javadoc {
        options.charSet = "UTF-8"
        options.encoding = "UTF-8"
    }

    jar {
        doFirst {
            copy {
                from project.rootDir.toPath().toAbsolutePath()
                into buildDir.name + '/resources/main/'
                include 'LICENSE*'
            }
        }
    }

    java {
        withSourcesJar()
    }

    tasks.named('sourcesJar') {
        from(rootProject.file('README.md'))
    }
}
